--- a/LibraryApp1/Pages/Privacy.cshtml
+++ b/LibraryApp1/Pages/Privacy.cshtml
@@ -5,4 +5,9 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    Sitemizi kötü niyetli saldırılardan korumak ve istatistik amacıyla sunucumuz tarafından otomatik olarak oluşturulan günlük dosyalarını kullanırız. Bu dosyalarda sitemizde hangi sayfaları ziyaret ettiğiniz, bu sayfaları ne zaman, hangi işletim sistemi ve tarayıcı ile ziyaret ettiğinizle ilgili bilgilerin yanında, IP adresiniz yer alır.
+
+    Gizlilik politikası ve kullanım şartları oluşturduğunuzda, sağlamış olduğunuz internet sitesi veya uygulama adınız, şirket adınız, e-mail adresiniz, sözleşme geçerlilik tarihi ve bulunduğunuz şehrin de dahil olduğu veriler ile bu politikaları ne zaman oluşturduğunuz kayıt edilmektedir.
+</p>
+    
