--- a/LibraryApp1/Pages/Shared/_LoginPartial.cshtml
+++ b/LibraryApp1/Pages/Shared/_LoginPartial.cshtml
@@ -1,16 +1,24 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using LibraryApp1.Models
 
+
 @inject SignInManager<UserInfo> SignInManager
 @inject UserManager<UserInfo> UserManager
+
 
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
+    if(User.IsInRole("client")){
+        <li class="nav-item">
+            <a class="nav-link text-dark"  href="/MyBooks"> Kitaplarım</a>
+        </li>
+        }
     <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+        <a id="manage" class="nav-link text-dark" title="Manage">Merhaba @UserManager.GetUserName(User)!</a>
     </li>
+       
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
             <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">Logout</button>
